# IntComp

./: .gitignore  CMakeLists.txt  main.cpp
core/: ColorPalette.h  IntComputer.cpp  IntComputer.h
tests/: test_intcomp.cpp
ui/: editor.cpp  editor.h  editor.ui
